--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">puzzle15</string>
 
+    <string name="about">About</string>
+
+
     <array name="languages">
         <item>English</item>
         <item>Lithuanian</item>
@@ -11,6 +14,5 @@
         <item>Letters</item>
         <item>Picture</item>
     </array>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
