Added "blue" theme to spinner

--- a/app/src/main/res/values-lt-rLT/strings.xml
+++ b/app/src/main/res/values-lt-rLT/strings.xml
@@ -57,6 +57,7 @@
     <array name="colorTheme">
         <item>Žalia</item>
         <item>Raudona</item>
+        <item>Mėlyna</item>
     </array>
 
     <array name="cardBackground">
