Added 1 theme to spinner

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,6 +60,7 @@
     <array name="colorTheme">
         <item>Green</item>
         <item>Red</item>
+        <item>Blue</item>
     </array>
 
     <array name="cardBackground">
