Added card background choices to spinner

--- a/app/src/main/res/values-lt-rLT/strings.xml
+++ b/app/src/main/res/values-lt-rLT/strings.xml
@@ -61,8 +61,10 @@
     </array>
 
     <array name="cardBackground">
-        <item>Paveikslėlis</item>
         <item>Balta spalva</item>
+        <item>Raudona spalva</item>
+        <item>Mėlyna spalva</item>
+        <item>Žalia spalva</item>
     </array>
 
     <array name="image">
