Can select custom image as tile. Need to fix image cropping to squares

--- a/app/src/main/res/values-lt-rLT/strings.xml
+++ b/app/src/main/res/values-lt-rLT/strings.xml
@@ -68,8 +68,9 @@
     </array>
 
     <array name="image">
-        <item>Pirma</item>
-        <item>Antra</item>
+        <item>Pirmas</item>
+        <item>Antras</item>
+        <item>Pasirinktinis</item>
     </array>
 
 </resources>
