Serveris, login, register all good(as far as login is conserned). Apsaugom nuimt komentarus (palikta, nes lengviau testuot).

--- a/app/src/main/res/values-lt-rLT/strings.xml
+++ b/app/src/main/res/values-lt-rLT/strings.xml
@@ -35,6 +35,8 @@
     <string name="Reset">Iš naujo</string>
     <string name="MainMenu">Pagrindinis meniu</string>
     <string name="Apply">Patvirtinti</string>
+    <string name="logged_in_as">Prisijungta kaip:</string>
+    <string name="logged_out">Neprisijungta.</string>
 
 
     <array name="languages">
