--- a/app/src/main/res/values-lt-rLT/strings.xml
+++ b/app/src/main/res/values-lt-rLT/strings.xml
@@ -79,5 +79,5 @@
         <item>Antras</item>
         <item>Pasirinktinis</item>
     </array>
-
+    <string name="account">Account</string>
 </resources>
